--- a/pulsar-transformations/pom.xml
+++ b/pulsar-transformations/pom.xml
@@ -88,6 +88,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-yaml</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
