--- a/streaming-ai/pom.xml
+++ b/streaming-ai/pom.xml
@@ -76,6 +76,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-yaml</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
